--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ disqus: "..."
 # Set your host if deployed not locally
 url: "https://localhost:4000"
 
+# Change this to your base URL if site is in gh-pages branch
+baseurl: ""
+
 
 # Set maximum posts per page
 paginate: 3
