--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ disqus: "..."
 url: "https://localhost:4000"
 
 # Change this to your base URL if site is in gh-pages branch
-baseurl: ""
+baseurl: "/aliquam"
 
 
 # Set maximum posts per page
