--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ include:  ["_pages"]
 sass:
   sass_dir: _sass
 
+
+excerpt_separator: "<!--more-->"
 permalink: "/posts/:year/:month/:title"
 
 gems: [jekyll-paginate]
