--- a/_config.yml
+++ b/_config.yml
@@ -13,18 +13,17 @@ subtitle: "Theme"
 # Following needed for disqus integration
 
 # Set your 'disqus' account name
- disqus: "..."
+ disqus: "grrinchas"
 
 # Uncomment if deployed locally
 # url: "https://localhost:4000"
 
 # Set your host if deployed not locally
-# For example "https://yourGithub.github.io"
-# url:
+url: "https://grrinchas.github.io"
 
 # Change this to your base URL starting with forward slash if site is in gh-pages branch
 # For example /branchName
-baseurl: ""
+baseurl: "/aliquam"
 
 
 ##########################################
