Fix blockquote issue

--- a/_config.yml
+++ b/_config.yml
@@ -13,17 +13,18 @@ subtitle: "Theme"
 # Following needed for disqus integration
 
 # Set your 'disqus' account name
-disqus: "grrinchas"
+disqus: "...."
 
 # Uncomment if deployed locally
 # url: "https://localhost:4000"
 
 # Set your host if deployed not locally
-url: "https://grrinchas.github.io"
+# For example "https://yourGitHub.github.io"
+url: ""
 
 # Change this to your base URL starting with forward slash if site is in gh-pages branch
 # For example /branchName
-baseurl: "/aliquam"
+baseurl: ""
 
 
 ##########################################
