--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ url: "https://grrinchas.github.io"
 # For example /branchName
 baseurl: ""
 
+# Change this to your google analytics ID
+google_analytics: "UA-78379987-1"
 
 ##########################################
 #          Optional variables
