Fix metda description

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 owner: "Dennis Grinch"
 
-title: "Dennis Grinch Blog"
+title: "Dennis Grinch Blog - Programming tutorials for beginners"
 
 # Following needed for disqus integration
 
