--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@
 ##########################################
 
 owner: Dennis Grinch
-
+quote: A problem is nothing more than a wrong perspective.
+quoteAuthor: Dennis Grinch
 title: Dennis Grinch Blog - Programming tutorials for beginners
 
 # Following needed for disqus integration
@@ -44,7 +45,6 @@ truncate_size: 30
 #          Do not change these variables
 ##########################################
 
-include:  ["_pages"]
 sass:
   sass_dir: _sass
 
