Add contact form

--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title: Dennis Grinch Blog - Programming tutorials for beginners
 
 include:
   - pages
-# Following needed for disqus integration
 
+# Following needed for disqus integration
 # Set your 'disqus' account name
 disqus: grrinchas
 
@@ -30,6 +30,9 @@ baseurl:
 
 # Change this to your google analytics ID
 google_analytics: UA-78379987-1
+
+# Contact form pupublic key
+contact_PK: ef1dcbc3b8a3c2deda24a2efe9a5f65f
 
 ##########################################
 #          Optional variables
