set up to my info

--- a/_config.yml
+++ b/_config.yml
@@ -3,31 +3,31 @@
 #     Change these variables !important
 ##########################################
 
-owner: Name Surname
+owner: Boyang LI
 
-title: Aliquam
+title: Boyang's Website
 
 # Set subtitle e.g "blog"
-subtitle: Theme
+subtitle: blog
 
 # Following needed for disqus integration
 
 # Set your 'disqus' account name
-disqus:
+disqus:rabbit5024
 
 # Uncomment if deployed locally
 # url: https://localhost:4000
 
 # Set your host if deployed not locally
 # For example "https://yourGitHub.github.io"
-url:
+url:https://github.com/Boyang--Li/boyang--li.github.io
 
 # Change this to your base URL starting with forward slash if site is in gh-pages branch
 # For example /branchName
 baseurl:
 
 # Change this to your google analytics ID
-google_analytics:
+google_analytics:lbynwpu
 
 # Change this to your http://getsimpleform.com public key
 contact_PK:
