--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ##########################################
 
 owner: Boyang LI
-title: Boyang's Website
+title: Boyang LI's Website
 timezone: Aisa/Hong_Kong
 
 # Set subtitle e.g "blog"
-subtitle: 李博扬
+subtitle: 李博扬的个人网站
 
 # Following needed for disqus integration
 # Set your 'disqus' account name
