--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ disqus: grrinchas
 
 # Set your host if deployed not locally
 # For example "https://yourGitHub.github.io"
-url: http://www.dennis-grinch.co.uk
+url: https://www.dennis-grinch.co.uk
 
 # Change this to your base URL starting with forward slash if site is in gh-pages branch
 # For example /branchName
