Update rwd values

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ punch-line: true
 
 # Your logo for the header
 logo:
-  title: Jhon Doe
+  title: John Doe
   subtitle: Designer & Developer
 
 include:
