--- a/_config.yml
+++ b/_config.yml
@@ -17,21 +17,9 @@ quote:
 # then this title will be used.
 title: Aliquam Theme - Author Dennis Grinch
 
-# Description and title in the header
-# true - displays, false - hides
-punch-line: false
+# Your logo text for the header
+logo: John Doe
 
-# If true then puts logo on the right and navigation on the left sides
-# in the header.
-headline: true
-
-# Your logo for the header
-logo:
-  title: John Doe
-  subtitle: Designer & Developer
-
-include:
-  - pages
 
 # Following needed for disqus integration
 # Set your 'disqus' account name
@@ -65,12 +53,12 @@ paginate: 5
 # Set permalink
 permalink: /:categories/:title
 
-# Set excerpt separator
-truncate_size: 40
-
 ##########################################
 #          Do not change these variables
 ##########################################
+
+include:
+  - _pages
 
 sass:
   sass_dir: _sass
