--- a/_config.yml
+++ b/_config.yml
@@ -4,44 +4,44 @@
 ##########################################
 
 # Set this for Copyright in the footer
-owner: Name Surname
+owner: Dennis Grinch
 
 # Optional quote in the footer
 # To disable set enable to false
 quote:
   enable: true
-  quote: Some fancy quote.
-  author: John Doe
+  quote: Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.
+  author: Albert Einstein
 
 # Set this to your main site title. If page doesn't have its own title,
 # then this title will be used.
 title: Aliquam Theme - Author Dennis Grinch
 
 # Your logo text for the header
-logo: John Doe
+logo: Dennis Grinch
 
 
 # Following needed for disqus integration
 # Set your 'disqus' account name
-disqus:
+disqus: grrinchas
 
 # Uncomment if deployed locally
 #url: https://localhost:4000
 
 # Set your host if deployed not locally
 # For example "https://yourGitHub.github.io"
-url:
+url: https://grrinchas.github.io
 
 # Change this to your base URL starting with forward slash if site is in gh-pages branch
 # For example /branchName
 # NOTE! only change if site is NOT in master's branch
-baseurl:
+baseurl: /aliquam
 
 # Change this to your google analytics ID
-google_analytics:
+google_analytics: UA-78379987-1
 
 # Contact form pupublic key
-contact_PK:
+contact_PK: ef1dcbc3b8a3c2deda24a2efe9a5f65f
 
 ##########################################
 #          Optional variables
