--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ quote:
 
 # Set this to your main site title. If page doesn't have its own title,
 # then this title will be used.
-title: Aliquam Theme - Author Dennis Grinch
+title: Aliquam Theme
 
 # Your logo text for the header
 logo: John Doe
