--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: Aliquam Theme
 disqus:
 
 # Uncomment if deployed locally
-#url: https://localhost:4000
+url: https://localhost:4000
 
 # Set your host if deployed not locally
 # For example "https://yourGitHub.github.io"
